--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -1,3 +1,11 @@
+\svnidlong
+{$HeadURL$}
+{$LastChangedDate$}
+{$LastChangedRevision$}
+{$LastChangedBy$}
+\svnid{$Id: $}
+
+
 % \documentclass[11pt,a4paper]{article}
 % \usepackage[left=2.5cm,right=2.5cm,top=3cm,bottom=3cm]{geometry}
 % \usepackage[utf8]{inputenc}
@@ -26,17 +34,6 @@
 % %
 % \hypersetup{colorlinks, citecolor=bluscuro, linkcolor=bluscuro, urlcolor=bluscuro}
 
-\def\Qtr{Q_{\rm tr}}
-\def\pT{p_{\rm T}}
-\def\mx{m_{\rm DM}}
-\def\gx{g_{\rm DM}}
-
- \def\be   {\begin{equation}}   \def\ee   {\end{equation}}
- \def\ba   {\begin{array}}      \def\ea   {\end{array}}
- \def\bea  {\begin{eqnarray}}   \def\eea  {\end{eqnarray}}
- \def\bean {\begin{eqnarray*}}  \def\eean {\end{eqnarray*}}
- \def\nn{\nonumber}
-\def\MCut{\ensuremath{M_\text{cut}}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%        	BEGIN DOCUMENT		   %%%%%%%%%%%%%%%
