--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -9,8 +9,11 @@
 \fancyhead[ol]{\svnrev;\svndate;\svnauthor}
 
 This document presents recommendations for
-the MC production and parameter scans
-for the various simplified models.
+the Monte Carlo (MC) production and parameter scans
+for various theoretical models of Dark Matter production
+at hadron colliders.  In particular, the document is
+intended to be a reference for dataset generation of
+Dark Matter models for the early stages of Run-2 at the LHC.
 
 What is the motivation for this report?
 
@@ -27,10 +30,10 @@ combination of data, but also facilitates cross checks of results.
 What is the format of this report?
 
 First, it describes the signatures and models of interest for
-dark matter searches.
+dark matter searches during Run-2 at the LHC.
 
 Secondly, it provides information on the tools to be used to
-simulate signals.
+simulate signals and related uncertainties.
 
 Finally, it makes a recommendation on a scan of parameters within
 those models based on supporting material.
