--- a/doc/tex/SimplifiedModelsIntro.tex
+++ b/doc/tex/SimplifiedModelsIntro.tex
@@ -5,8 +5,24 @@
 {$LastChangedBy$}
 \svnid{$Id$}
 
-General topics:
+Many Run-1 results of dark matter searches were interpreted in the
+context of Effective Field Theory (EFT).  There were several reasons
+for this.  First, the presentation is model independent.   Secondly,
+the approach is economical, requiring only a few simulated datasets.
+Finally, at the time, there was no catalogue of alternative
+interpretations of the data.   The downside of the EFT approach is that
+many of the implicit limitations were not widely understood.
+
+Since then, there has arisen a consensus on a handful of simple models
+of dark matter production that have a hope of mapping into a more
+complete theory.  This document describes them.  Also, in some cases,
+there is no good alternative to using EFT.  Even in the case of simplified
+models, we recommend showing the EFT limit.
+
+Assumptions and simplifications made in this report:
 \begin{itemize}
  \item choice of Dark Matter type: Dirac (unless specified otherwise) and what we might be missing
- \item MFV and what we might be missing
+ \item Minimal Flavor Violation (MFV) -- new physics appears only through Yukawa couplings -- and what we might be missing
+ \item minimal width for mediators
+ \item minimal particle content
 \end{itemize}
