--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -1,3 +1,10 @@
+\svnidlong
+{$HeadURL$}
+{$LastChangedDate$}
+{$LastChangedRevision$}
+{$LastChangedBy$}
+\svnid{$Id$}
+
 As described in Section~\ref{sec:monojet_scalar}, a model with a scalar/pseudoscalar particle mediating the DM-SM interactions is one of the simplest UV completions of our EFT models. 
 %one of the most simple UV complete extension of the effective field theory approach is the addition of a scalar mediator between DM and SM.
 %A gauge singlet mediator can have tree-level interactions with a singlet DM particle that is either a Dirac or Majorana fermion, or DM that is a scalar itself. The spin-$0$ mediator can either be a real or complex scalar; a complex scalar contains both scalar and pseudoscalar particles, whereas the real field only contains the scalar particle.
